# Bee-Nav

./: .gitignore  LICENSE  README.md
code_theoretical_simulation_analysis/: ANN.py  README.md  insect_navigation.py  model.pt  model_10.pt  observation_simulator.py  output_utils.py  parameters.json  parameters_SI1.json  parameters_SI2_close.json  parameters_SI2_close_perceptron.json  parameters_SI2_close_perceptron_circle.json  parameters_SI2_edge.json  parameters_SI2_edge_perceptron.json  parameters_SI2_edge_theory.json  parameters_SI2_two_landmarks.json  parameters_SI3_three_landmarks_equilateral.json  parameters_SI3_three_landmarks_isosceles.json  parameters_SI3_three_landmarks_isosceles_analysis.json  parameters_SI3_three_landmarks_scalene.json  parameters_SI3_two_landmarks.json  parameters_SI4_bee_flight_noise.json  plotting.py  requirements.txt  run_all_experiments.py  theory.py  tortuosity.py
path_integration_noise_simulation/: README.md  config_odometry.json  determine_LHA_odometry.py  requirements.txt  run_path_integration_experiments.py
robot_network_training/: README.md
robot_network_training/home-learning_laptop/: README.md  config.yaml  dataset.py  generate_label.py  train.py
robot_network_training/home-learning_rpi/: config.yaml  dataset.py  evaluate.py  generate_label.py  requirements.txt  test.py  (+1 more)
robot_onboard/: README.md
robot_onboard/homingdrone-ros2/src/mocap_relay/: package.xml  setup.cfg  setup.py
robot_onboard/homingdrone-ros2/src/mocap_relay/mocap_relay/: mocap_relay_node.py
visual_simulator_docker/: Dockerfile  README.md  run_sim.sh
(+88 files in other folders)
